Changed Name from "Georg" to "Andreas"

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             Für ihre Erfolge im Studium erhielt Erika Spring den Würdigungspreis 2025. Derzeit studiert sie Kammermusik im Masterstudium bei Christoph Eggner.</p>
             <p>Seit einigen Jahren wendet sich Erika Spring verstärkt der zeitgenössischen Klavier- und Kammermusik zu. 
             Ein weiteres Interesse gilt außerdem dem Hammerklavier, welches im Schwerpunkt ihres Studiums bei Stefan Gottfried den Anfang gefunden hat.
-            Prägende musikalische Impulse erhielt Erika Spring in den Meisterklassen von Igor Lebedev, Georg Staier, Gábor Csalog und Michel Béroff.</p>
+            Prägende musikalische Impulse erhielt Erika Spring in den Meisterklassen von Igor Lebedev, Andreas Staier, Gábor Csalog und Michel Béroff.</p>
             <p>Seit 2021 ist Erika Spring Mitglied der Stiftung Live Music Now – Yehudi Menuhin Wien. 
             Sie erhielt 2016 eine Auszeichnung beim „BePhilharmonic – Strauss Music Contest“ der Wiener Philharmoniker, ist Preisträgerin des Münchner Klavierpodiums und bekam das Dr.-Josef-Ratzenböck-Stipendium verliehen. 
             Für die Übe-App <a href="#practice-room-ref" class="bio-link"><i>Practice Room</i></a> wurde sie 2025 mit dem AVISO-Publikationspreis ausgezeichnet. </p>
