Added "Anna Aigner" Link

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="ensembles">
                 <div class="ensembles-text-right">
                     <h3><i>Duo Veris</i></h3>
-                    <p>2013 lernten sich die Cellistin Anna Aigner und Erika Spring am Musikgymnasium Linz kennen. Seitdem musizieren sie gemeinsamen in vielfältigen Projekten und Konzerten. </p>
+                    <p>2013 lernten sich die Cellistin <a href="https://www.annaaigner.at/de/" target="_blank" rel="noopener noreferrer">Anna Aigner</a> und Erika Spring am Musikgymnasium Linz kennen. Seitdem musizieren sie gemeinsamen in vielfältigen Projekten und Konzerten. </p>
                     <p>Ihr Repertoire umfasst Werke von Beethoven, Schubert, Schumann und Schostakowitsch, ebenso wie weniger bekannte Kompositionen und zeitgenössische Musik. 
                     Ein besonderer Schwerpunkt ihres künstlerischen Schaffens liegt im freien Improvisieren, das ihnen als unmittelbare Form des persönlichen Ausdrucks dient – ohne Worte, mit tonalen Elementen, oft abstrakt. 
                     In Kombination mit zeitgenössischer Musik entstehen so abwechslungsreiche und lebendige Konzertprogramme. </p>
@@ -98,7 +98,7 @@
             <div class="ensembles">
                 <div class="ensembles-text-right">
                     <h3><i>Trio Paidia</i></h3>
-                    <p>Aus der Begeisterung für zeitgenössische Musik entstand das <i>Trio Paidia</i>, bestehend aus der Cellistin Anna Aigner, der Flötistin Miho Sakuma und Erika Spring. 
+                    <p>Aus der Begeisterung für zeitgenössische Musik entstand das <i>Trio Paidia</i>, bestehend aus der Cellistin <a href="https://www.annaaigner.at/de/" target="_blank" rel="noopener noreferrer">Anna Aigner</a>, der Flötistin Miho Sakuma und Erika Spring. 
                     Die Drei verbindet die Neugier auf experimentelle Konzertformate, in denen sie Ideen musikalisch umkreisen und neue Klangwelten eröffnen. 
                     Ein besonderes Interesse des Trios gilt der Zusammenarbeit mit Komponist:innen und der Einbindung von Auftragswerken in ihre Konzertprogramme.</p>
                 </div>
@@ -214,7 +214,7 @@
         <div class="contacts">
             <p>Erika Spring <br>
             1100 Wien <br> 
-            E-mail: <a href="mailto:erika.spring@gmx.at">contact@erika-spring.at</a>
+            E-mail: <a href="mailto:contact@erika-spring.at">contact@erika-spring.at</a>
             </p>
 
             <a href="https://www.youtube.com/@erika.spring" target="_blank" class="youtube-icon">
